--- a/Language_DetectorFR_Prep.ipynb
+++ b/Language_DetectorFR_Prep.ipynb
@@ -16,7 +16,6 @@
     "import os #To manage access to directories from python\n",
     "import string\n",
     "import unicodedata\n",
-    "#from nltk.corpus import words\n",
     "from nltk import ngrams\n",
     "import pickle\n",
     "import time\n",
@@ -90,7 +89,7 @@
     "\n",
     "2- Unicode allows multiple character sequences to represent the same string. For example, the string \"capital A with two dots\" can be represented as a single character \"\\u00C4\", or as the two characters \"A\\u0308\". The Unicode standard defines multiple ways to \"normalize\" a Unicode string so different ways of representing a given string map to the same \"canonical form\". Normalizing Unicode strings is necessary in order to consistently compare or sort strings in languages with accented characters. \n",
     "\n",
-    "3-Tokenize to changer to lower case and eliminate alpha-numeric/numeric data."
+    "3-Tokenize to changer to lower case and eliminate alpha-numeric/numeric tokens."
    ]
   },
   {
@@ -106,7 +105,6 @@
     "    line=line.split()\n",
     "    line=[word.lower() for word in line]\n",
     "    line=[word for word in line if word.isalpha()]\n",
-    "    #line=[word for word in line if word not in words.words()]\n",
     "    line=' '.join(line)\n",
     "    return(line)"
    ]
@@ -762,7 +760,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Saving the features vector for French language."
+    "Saving the features vector for French language. \n",
+    "Our work is done here, this next phase requires having intitial features for the other languages so we create notebooks for the other languages."
    ]
   },
   {
@@ -826,24 +825,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 27,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "161\n"
-     ]
-    }
-   ],
    "source": [
-    "b=0\n",
-    "for i in it_features:\n",
-    "    if i in sp_features:\n",
-    "        b=b+1\n",
-    "print(b)"
+    "Now, I will create features that are specific to a language, since some trigrams might be redundant throught out different languages."
    ]
   },
   {
@@ -2871,20 +2856,6 @@
     "    pickle.dump(fr_dataFrame,pickle_out32)\n",
     "del(pickle_out32)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
