--- a/Language_DetectorFR_Prep.ipynb
+++ b/Language_DetectorFR_Prep.ipynb
@@ -927,26 +927,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this phase we will make the representation of our text files in function of all trigrams we extracted earlier. Each cell of the following will construct column by column the frequency of the current trigram in all files in the french folder."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "haaaaaaaa\n"
-     ]
-    }
-   ],
-   "source": [
-    "dif={'g':1,'h':0}\n",
-    "if dif['g']:\n",
-    "    print('haaaaaaaa')"
+    "In this phase we will make the representation of our text files in function of all trigrams we extracted earlier. Each cell(block of code) of the following will construct column by column the frequency of the current trigram from the final features vector in all files in the french folder."
    ]
   },
   {
